commands logic add